- patch to delete for the delete api
