# src/controllers/v1/files/deleteFile.go
@@ -3,7 +3,6 @@ package files
 import (
 	"github.com/gin-gonic/gin"
 	"video-conversion-service/src/configs/funtions"
-	"video-conversion-service/src/configs/types"
 	"video-conversion-service/src/services"
 )
 
@@ -13,19 +12,19 @@ import (
 // @Summary delete a file from specific location
 // @Schemes
 // @Description execution will delete a file from specific location
-// @Param payload body types.FileDeleteJson true "Mount Path With Name"
+// @Param mountPathWithName query string true "File Name with the full mounted path"
 // @Accept json
 // @Produce json
 // @Success 200 {object} types.ResponseObject
 // @Failure 400 {object} types.ErrorObject
-// @Router /files/remove [patch]
+// @Router /files/remove [delete]
 func DeleteFile(gtx *gin.Context) {
-	var payload types.FileDeleteJson
-	if bindError := gtx.ShouldBind(&payload); bindError != nil {
-		funtions.ErrorResponse(gtx, "File delete payload mulfuntion! ", bindError.Error())
+	mountPathWithName, err := gtx.GetQuery("mountPathWithName")
+	if err != true {
+		funtions.ErrorResponse(gtx, "File delete payload mulfuntion! ", nil)
 		return
 	}
-	_, osErr := services.DeleteFileFromDir(payload.MountPathWithName)
+	_, osErr := services.DeleteFileFromDir(mountPathWithName)
 	if osErr != nil {
 		funtions.ErrorResponse(gtx, "File delete error! ", osErr.Error())
 		return
